<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WiredShack</string>
    <string name="google_place_key" translatable="false">AIzaSyBEB2zJn18Cv4Djrmn8sEgbGgLa_2EKKdE</string>
    <string name="facebook_app_id">1796233697214316</string>
    <string name="fb_login_protocol_scheme">fb1796233697214316</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_live_stream">Upcoming\nLive Stream</string>
    <string name="live_stream">Live Stream</string>
    <string name="recent_event">Recent Event</string>
    <string name="search">Search</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="search_by_location">Search by location</string>
    <string name="follow">Follow</string>
    <string name="txt_activity">Activity</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="view_sent_request">View sent Request</string>
    <string name="accepted">Accepted</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_me">About Me</string>
    <string name="dummy_about_me">As conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you think about it, you travel across her face, and She is the host to your journey; without Her we could not find the unfolding adventures that attract and feed</string>
    <string name="following_events">Following Events</string>
    <string name="view_all_events">View All Events</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="event_activities">Activities</string>
    <string name="txt_cancel">Cancel</string>
    <string name="request_for_live_streaming">Request for Live Streaming</string>
    <string name="cancel_request_for_live_streaming">Cancel Request of Live Streaming</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="dummy_event_description">As conscious traveling Paupers we must always be concerned about our dear Mother Earth.</string>
    <string name="dummy_event_date">Event Date : 31 Jan 2021</string>
    <string name="event_date">%1s</string>
    <string name="dummy_event_time">Event Time : 10:00 PM to 12:00 AM</string>
    <string name="event_time">%1s to %2s</string>
    <string name="dummy_event_location">Event Location : Karnavati Club</string>
    <string name="event_location">Event Location : %1s</string>
    <string name="write_comment">Write Comment ...</string>
    <string name="dummy_event_comment">Since the introduction of Virtual Game, it has been achieving great ... Read more</string>
    <string name="done">Done</string>
    <string name="change_profile_photo">Change Profile\nPhoto</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="edit_event">Edit Event</string>
    <string name="txt_save">Save</string>
    <string name="event_name">Event Name :</string>
    <string name="description">Description :</string>
    <string name="location">Location :</string>
    <string name="txt_to">to</string>
    <string name="add_event">Add Event</string>
    <string name="sort_by">Sort by</string>
    <string name="followed">Followed</string>
    <string name="followed_by">Followed By</string>
    <string name="time">Time :</string>
    <string name="date">Date :</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_must_be_same">Password and Confirm Password mustbe same.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_wants_wrong">Something wants wrong</string>
    <string name="please_try_after_some_time">Please try after some time.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_image_from">Choose imge from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_cover_photo">Upload/Change Cover Photo</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_dob">enter Date of Birth</string>
    <string name="txt_no">No</string>
    <string name="logout">Log Out</string>
    <string name="logout_msg">Are you sure\nyou want to logout ?</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_description">Enter Event Descriptions</string>
    <string name="enter_event_location">Enter Event Location</string>
    <string name="enter_event_date">Enter Event Date</string>
    <string name="enter_event_start_time">Enter Event Start Time</string>
    <string name="enter_event_end_time">Enter Event End Date</string>
    <string name="start_end_time_not_valid_msg">Event Start Time must be before Event End Time</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="add_atleast_one_image">Add atleast one image</string>
    <string name="unfollow">Unfollow</string>
    <string name="event_organiser">Event Organiser</string>
    <string name="user">User</string>
    <string name="search_by_event_organiser">Search by Event Organiser</string>
    <string name="wish_list">Wish List</string>
    <string name="past_event">Past Event</string>
    <string name="no_event_found">No Event Found</string>
    <string name="txt_ok">Ok</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">This app access your Location.</string>
    <string name="followed_count">%1s Followed</string>
    <string name="live_now">Live Now</string>
    <string name="accept">Accept</string>
    <string name="request">Request</string>
    <string name="time_tag">Time : %1s</string>
    <string name="date_tag">Date : %1s</string>
    <string name="delete">Delete</string>
    <string name="dj">DJ</string>
    <string name="select_organiser">Select\nOrganiser :</string>
    <string name="select_organiser_line">Select Organiser</string>
    <string name="select_organiser_error">Select Organiser</string>
    <string name="select_event_organiser">Select Event\nOrganiser :</string>
    <string name="select_event_organiser_line">Select Event Organiser</string>
    <string name="select_event_organiser_error">Select Event Organiser</string>
    <string name="select_dj_organiser">Select DJ\nOrganiser :</string>
    <string name="select_dj_organiser_line">Select DJ Organiser</string>
    <string name="select_dj_organiser_error">Select DJ Organiser</string>
    <string name="start_event">Start Event</string>
    <string name="event_not_started">Event Not Started</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="select_club">Select Club</string>
    <string name="select_dj">Select DJ</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>
    <string name="live">Live</string>
    <string name="go_live">Go Live</string>
    <string name="send_email">Send Email</string>
    <string name="select">Select</string>
    <string name="organiser">Organiser</string>
    <string name="dj_organiser">DJ Organiser</string>
    <string name="already_requested_msg">You already requested this Event. Wait for the Organizer to approve the request.</string>
    <string name="request_event_msg">You have to request an Organizer to watch this Event Live.</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="club">Club</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="txt_forgot_password">Forgot\nPassword</string>
    <string name="send_code">Send Code</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_done">Done</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="people_club">People &amp; Club</string>
    <string name="people">People</string>
    <string name="txt_time">Time</string>
    <string name="txt_date">Date</string>
    <string name="txt_description">Description</string>
    <string name="txt_event_name">Event Name</string>
    <string name="change_cover_image">Change cover image</string>
    <string name="txt_event_details">Event Details</string>
    <string name="hint_select_club">Select Club</string>
    <string name="hint_location">Location</string>
    <string name="hint_select_dj">Select DJ</string>
    <string name="list_of_organiser">List of Organiser</string>
    <string name="assign">Assign</string>
    <string name="list_of_club">List of Club</string>
    <string name="list_of_dj">List of DJ</string>
    <string name="txt_event">Event</string>
    <string name="events_near_you">Clubs near you</string>
    <string name="txt_suggested">Suggested</string>
    <string name="daily">Daily</string>
    <string name="email_send_success_fully">Email sedn success fully</string>
    <string name="txt_live">Live</string>
    <string name="delete_image_msg">Are you sure\nyou want to delete Image?</string>
    <string name="delete_event_msg">Are you sure\nyou want to delete Event?</string>
    <string name="hint_club_name">Club Name</string>
    <string name="hint_physical_address">Physical Address</string>
    <string name="hint_opening_time">Opening Time</string>
    <string name="hint_closing_time">Closing Time</string>
</resources>