<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackHome"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotificationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:includeFontPadding="false"
            android:text="@string/txt_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:fontFamily="@font/poppins_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIncomingRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_2sdp"
                tools:ignore="RtlCompat"
                android:text="@string/incoming_request"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/colorBlackText"
                android:textAlignment="center"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/back_round_white"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEventActivities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_2sdp"
                tools:ignore="RtlCompat"
                android:text="@string/event_activities"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/back_border_white"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:padding="@dimen/_12sdp"/>
    </LinearLayout>
</layout>