<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackHome"
        android:orientation="vertical"
        tools:context=".user.notification.NotificationFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAccountProfile"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:src="@drawable/place_holder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotificationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:includeFontPadding="false"
            android:text="@string/txt_activity"
            android:textColor="@color/white"
            android:textSize="@dimen/_28ssp"
            app:fontFamily="@font/roboto_medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:background="@drawable/back_round_black"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAcceptedRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/back_pink_select"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/accepted_request"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/roboto_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViewSentRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/back_round_black"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/view_sent_request"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/roboto_medium" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/_65sdp" />
    </LinearLayout>
</layout>