<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/_18sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_round_white"
            android:paddingTop="@dimen/_35sdp"
            android:paddingBottom="@dimen/_35sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogoutTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/logout_msg"
                android:textAlignment="center"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/_16ssp"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogoutTitle">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogoutYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/back_login_selection_main"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/txt_yes"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:fontFamily="@font/roboto_medium" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogoutNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/back_login_selection_main"
                    android:backgroundTint="@color/colorRed"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/txt_no"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:fontFamily="@font/roboto_medium" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
