<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/_18sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_round_white"
            android:paddingStart="@dimen/_12sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgEventDataClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEventDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:includeFontPadding="false"
                android:text="@string/txt_event_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:overScrollMode="never"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toTopOf="@id/tvEventDataDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEventDataTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEventDataName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/back_border_grey"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/txt_event_name"
                        android:imeOptions="actionNext"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorBlack66"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEventDataSelectOrganiser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/back_border_grey"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:editable="false"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/hint_select_club"
                        android:includeFontPadding="false"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorBlack66"
                        android:textSize="@dimen/_12ssp" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEventDataDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/back_border_grey"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="top|left"
                        android:hint="@string/txt_description"
                        android:includeFontPadding="false"
                        android:inputType="text|textMultiLine"
                        android:lines="4"
                        android:minLines="4"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorBlack66"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEventDataLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/back_border_grey"
                        android:editable="false"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/hint_location"
                        android:includeFontPadding="false"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorBlack66"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEventDataDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/back_login_selection_main"
                android:backgroundTint="@color/colorPink4D"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/txt_done"
                android:textAlignment="center"
                android:textSize="@dimen/_16ssp"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
